# SYGNIF

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CLAUDE.md  INSTANCE_SETUP.md  README.md  REPO_ANALYSIS.md  SETUP.md  SNAPSHOT.md  SYGNIF.md  SYGNIF_CONTEXT.md  SygnifStrategy.py  config_claude_bot.example.json  config_futures.json  dashboard.html  dashboard_btc01_grid.html  dashboard_btc_interface.html  dashboard_btc_terminal.html  dashboard_cryptoapis.py  dashboard_futures_full.html  dashboard_server.py  dashboard_server_btc01_grid.py  dashboard_server_btc_interface.py  dashboard_server_btc_terminal.py  dashboard_server_futures.py  docker-compose.btc-nautilus-research.yml  docker-compose.nautilus-research.yml  docker-compose.nautilus-strategy-sidecar.yml  docker-compose.training-pipeline.yml  docker-compose.yml  fix_script.py  neurolinked.service.env.example  notification_handler.py  notify.sh  pyproject.toml  requirements-dev.txt  requirements.txt  (+11 more)
.cursor/: cursor-agent-config.md  mcp.json
archive/: README.md  dashboard.html  dashboard_futures_full.html  dashboard_server_futures.py  fill_patch.py  freqtrade_claude_setup.md  telemetry.py  update_movers.py
cron/: crontab.txt  trading_success_cron.sh
docker/: Dockerfile.btc_trader  Dockerfile.custom  Dockerfile.finance_agent  Dockerfile.nautilus_research  Dockerfile.notifications  Dockerfile.training_pipeline  entrypoint.sh
docs/: AWS_SSM_SESSION_MANAGER.md  EC2_FINANCE_STRATEGY_WORKFLOW.md  EC2_NETWORK_EVOLUTION_WORKFLOW.md  SECURITY_METRICS.md  actor_boundaries.md  backtest_live_parity.md  btc_expertise_proven_formulas.md  btc_trend_backtest_checklist.md  correlation_research_evidence.md  market_strategy_3.md  nautilus_evaluation.md  new_strategies_overview.md  notification_audit.md
experiments/sygnif_toolkit/: .flake8  Dockerfile.backtest  README.md  bitcoin_sim.py  pyproject.toml  requirements-backtest.txt
experiments/sygnif_toolkit/edge_attrib/: decompose.py  report.py
experiments/sygnif_toolkit/fixtures/: decomposed.jsonl  events.jsonl  fills.jsonl
experiments/sygnif_toolkit/lead_lag/: backtest.py  logic.py
experiments/sygnif_toolkit/tests/: test_decompose.py  test_lead_lag.py
finance_agent/: AGENT_OPS_README.md  auto_improvement_workflow.md  bot.py  briefing.md  closed_trades_analysis.py  cloud-runbook.md  crypto_market_data.py  expert_sentiment.py  fdn_fundamentals.py  finance_agent_expert.py  futures-agent-prompt.md  http_main.py  newhedge_client.py  ruleprediction_briefing.py  spot-agent-prompt.md  strategy-comparison-module.md  training_hub.py
letscrash/: BTC_DUMP_PROTECTION_DESIGN.md  BTC_STRATEGY_0_1_BYBIT_BRIDGE.md  BTC_Strategy_0.1.md  BTC_TRADER_DOCKER.md  BTC_TRADING_DOCKER_SYGNIF_INHERIT_DESIGN.md  PREDICTION_PIPELINE_AND_SELF_LEARNING_PLAN.md  README.md  RULE_AND_DATA_FLOW_LOOP.md  btc_strategy_0_1_rule_registry.json
live_site_snapshot/: futures_redacted.html  spot_redacted.html
prediction_agent/: SOURCES.md  btc_analysis_order_signal.py  btc_predict_5m.pine  btc_predict_live.py  btc_predict_runner.py  btc_prediction_output.json  btc_prediction_proof_log.jsonl  btc_strategy_guidelines.py  rule_tag_journal.py  rule_trade_agent_helper.py  swarm_sl_liquidation_memory.jsonl  training_channel_output.json
scripts/: btc_analysis_forceenter.py  btc_predict_runner_host.sh  bybit_stream_monitor.py  bybit_stream_monitor_locked.sh  cron_btc_prediction_learning.sh  cron_crypto_market_data_daily.sh  cron_finance_agent_btc_context.sh  cron_tg_notify.py  cron_trading_success.sh  cron_wrap_tg.sh  deploy_health_check.sh  fetch_financialdata_sample.py  ft_btc_0_1_forceenter.py  linear_workflow.env.example  linear_workflow_env.sh  prediction_horizon_check.py  rebuild_freqtrade_btc_0_1.sh  requirements_bybit_stream.txt  (+24 more)
(+466 files in other folders)
