[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "sygnif"
version = "0.0.0"
description = "Freqtrade Sygnif strategy, services, and tests"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "rich>=13.9.0",
]

[project.scripts]
sygnif = "sygnif_cli:main"

[tool.setuptools]
py-modules = ["sygnif_cli"]

[tool.ruff]
target-version = "py312"
line-length = 127
src = [
    "tests",
    "user_data/strategies",
    "notification_handler.py",
    "dashboard_server.py",
    "dashboard_server_futures.py",
    "dashboard_cryptoapis.py",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "ann_text_project",
    "NostalgiaForInfinity",
    "staging",
    "backups",
    "user_data/backtest_results",
    "user_data/hyperopt_results",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
]
ignore = [
    "E501",
    "E731",
]
# Stubs must be registered before importing strategy deps (freqtrade/talib).
per-file-ignores = { "tests/conftest.py" = ["E402"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
    "integration: slow or network; run with pytest -m integration",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "ann_text_project/*",
    "NostalgiaForInfinity/*",
    "staging/*",
    ".venv/*",
]

[tool.coverage.report]
skip_empty = true
precision = 1
