[tool.poetry]
name = "sygnif_toolkit"
version = "0.1.0"
description = "SYGNIF Toolkit"
authors = ["SYGNIF"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
