[tool.poetry]
name = "sygnif_toolkit"
version = "0.1.0"
description = "SYGNIF Toolkit"
authors = ["SYGNIF"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
